Fix site-head z-index

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -50,7 +50,7 @@ a.disabled, .bttn.disabled {
 
 #site-head {
   position: relative;
-  z-index: 10;
+  z-index: 80;
   background-color: $secondary-color;
   box-shadow: inset 0 -4px 0 0 shade($secondary-color, 15%), 0 4px 0 0 rgba($primary-color, 0.1);
   margin: 0;
